login page, productlist page

--- a/mocan-server/.env
+++ b/mocan-server/.env
@@ -1,3 +1,7 @@
 DATABASE_URI=mongodb://localhost:27017/mocan
 PORT=3000
 SECRET_KEY=123456
+
+CLOUDINARY_CLOUD_NAME=dx7ldcnjy
+CLOUDINARY_API_KEY=316559783434542
+CLOUDINARY_API_SECRET=LVdh1bPjCBTQlXafEfSZw6D_dfU
