--- a/mocan-server/package.json
+++ b/mocan-server/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^17.2.2",
     "express": "~4.16.1",
@@ -16,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
     "morgan": "~1.9.1",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10"
   }
 }
