Top sell, order send email to guest

--- a/mocan-server/.env
+++ b/mocan-server/.env
@@ -1,7 +1,11 @@
-DATABASE_URI=mongodb://localhost:27017/mocan
+# DATABASE_URI=mongodb://localhost:27017/mocan
+DATABASE_URI=mongodb+srv://mocan:mocan123456@mocan-demo-0.wyjrlw3.mongodb.net/mocan
 PORT=3000
 SECRET_KEY=123456
 
 CLOUDINARY_CLOUD_NAME=dx7ldcnjy
 CLOUDINARY_API_KEY=316559783434542
 CLOUDINARY_API_SECRET=LVdh1bPjCBTQlXafEfSZw6D_dfU
+
+EMAIL_USER=phathpce181877@fpt.edu.vn
+EMAIL_PASS=bnii bvra oceq sehp
