--- a/mocan/package.json
+++ b/mocan/package.json
@@ -9,8 +9,10 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.27.5",
     "axios": "^1.12.2",
+    "chart.js": "^4.5.1",
     "nodemailer": "^7.0.9",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.3",
     "react-scripts": "5.0.1",
