--- a/mocan-server/.env
+++ b/mocan-server/.env
@@ -9,3 +9,5 @@ CLOUDINARY_API_SECRET=LVdh1bPjCBTQlXafEfSZw6D_dfU
 
 EMAIL_USER=phathpce181877@fpt.edu.vn
 EMAIL_PASS=bnii bvra oceq sehp
+
+API_URL=http://localhost:3001
