--- a/mocan/package.json
+++ b/mocan/package.json
@@ -10,6 +10,7 @@
     "antd": "^5.27.5",
     "axios": "^1.12.2",
     "chart.js": "^4.5.1",
+    "dotenv": "^17.2.3",
     "nodemailer": "^7.0.9",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
